# learn-with-expa

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.py
src/expa/: chat.py  conversation_persist.py  llm.py  main.py  model.py  record_audio.py  transcribe_audio.py
src/expa/models/: Role.py  conversation.py  starter.py  theme.py
src/expa/persistence/: __init__.py  conversation_persist.py  guardrails_persist.py  starter_persist.py  theme_persist.py
src/expa/routers/: converse.py  guardrails.py  root.py  starters.py  themes.py
src/expa/service/: ConversationService.py  __init__.py  speech_to_text.py  text_to_speech.py
src/expa_configs/: __init__.py  application-dev.yaml  application-local.yaml  application.yaml  firestore.indexes.json  logger_config.json
