[tool.poetry]
name = "expa"
version = "0.1.0"
description = ""
authors = ["Shashank Adkeshwar <shashankadkeshwar1@gmail.com>"]
readme = "README.md"
packages = [{include = "expa", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pydantic = "^2.11.4"
fastapi = "^0.115.12"
pyaudio = "^0.2.14"
gtts = "^2.5.4"
speechrecognition = "^3.14.3"
python-dotenv = "^1.1.0"
pydub = "^0.25.1"
uvicorn = "^0.34.2"
pyyaml = "^6.0.2"
python-multipart = "^0.0.20"
firebase-admin = "^6.9.0"
google-generativeai = "^0.8.5"
google-genai = "^1.24.0"
numpy = "^2.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
